[fabric] Update ansible playbooks and roles
**Primary Changes**

1.Deploy fabric 2.5.4 without channel using ansible.
2.Deploy fabric 2.2.2 without channel using ansible.
3.Update cleanup.yaml

fixes #2556

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-catools/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-catools/values.yaml
@@ -51,7 +51,7 @@ image:
 orgData:
   #Provide the CA URL for the organization without https
   #Eg. caAddress: ca.example.com
-  caAddress: 
+  caAddress: ""
   #Provide the CA Admin User for the organization
   #Eg. caAdminUser: admin
   caAdminUser: supplychain-admin
@@ -69,12 +69,24 @@ orgData:
   componentSubject: "O=Orderer,L=51.50/-0.13/London,C=GB"
 
 users: 
-  # Generating User Certificates with custom attributes using Fabric CA in Bevel for Peer Organizations
+  # Generating User Certificates with custom attributes using Fabric CA in Bevel for Peer Organizations   
+  # Eg.
+  # usersList:
+  #   - user:
+  #     identity: user1
+  #     attributes:
+  #     - key: "hf.Revoker"
+  #       value: "true"
+  #   - user:
+  #     identity: user2
+  #     attributes:
+  #     - key: "hf.Revoker"
+  #       value: "true"
   usersList:
-    - identity: user1
-      attributes:
-      - key: "hf.Revoker"
-        value: "true"
+    # - identity: user1
+    #   attributes:
+    #   - key: "hf.Revoker"
+    #     value: "true"
     # - identity: user2
     #   attributes:
     #   - key: "hf.Revoker"
