--- a/platforms/hyperledger-fabric/charts/fabric-genesis/templates/job.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-genesis/templates/job.yaml
@@ -118,6 +118,7 @@ spec:
               }
               . /scripts/package-manager.sh
               # Define the packages to install
+              apt-get update --allow-releaseinfo-change
               packages_to_install="jq curl wget"
               install_packages "$packages_to_install"
               # Download kubectl binary
