--- a/platforms/hyperledger-fabric/charts/fabric-peernode/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-peernode/templates/configmap.yaml
@@ -88,8 +88,6 @@ data:
           OrganizationalUnitIdentifier: {{ .Values.peer.mspConfig.nodeOUs.ordererOUIdentifier }}
 
 ---
-{{- $file := .Files.Get "files/core.yaml" }}
-{{ if $file }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -103,8 +101,8 @@ metadata:
     app.kubernetes.io/release: {{ .Release.Name }}
     app.kubernetes.io/managed-by: helm
 data:
-  core.yaml: {{ .Files.Get "files/core.yaml" | nindent 8 | quote }}
-{{ end }}
+  core.yaml: {{ .Files.Get "conf/default_core.yaml" | nindent 8 | quote }}
+
 {{- $orderercrt := .Files.Get "files/orderer.crt" }}
 {{ if $orderercrt }}
 ---
