--- a/platforms/hyperledger-fabric/configuration/cleanup.yaml
+++ b/platforms/hyperledger-fabric/configuration/cleanup.yaml
@@ -34,10 +34,9 @@
         name: "delete/genesis"
       vars:
         component_name: "{{ item.name | lower }}-net"
-        sys_channel_name: "syschannel"
       loop: "{{ network['organizations'] }}"
       when: 
-      - item.type == "orderer"
+      - item.services.orderers is defined and item.services.orderers | length > 0
       - network.env.type != 'operator'
 
     - include_role: 
