--- a/platforms/hyperledger-fabric/configuration/roles/create/namespace/tasks/main.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/create/namespace/tasks/main.yaml
@@ -9,12 +9,12 @@
 #############################################################################################
 
 # Check if namespace created
-- name: "Checking if the namespace {{ item.name | lower }}-net already exists"
+- name: "Checking if the namespace {{ org.name | lower }}-net already exists"
   include_role:
     name: "{{ playbook_dir }}/../../shared/configuration/roles/check/k8_component"
   vars:
     component_type: "Namespace"
-    component_name: "{{ item.name | lower }}-net"
+    component_name: "{{ org.name | lower }}-net"
     type: "no_retry"
   register: get_namespace
   tags:
@@ -39,7 +39,7 @@
     name: "{{ playbook_dir }}/../../shared/configuration/roles/git_push"
   vars:
     GIT_DIR: "{{ playbook_dir }}/../../../"
-    gitops: "{{ item.gitops }}"
+    gitops: "{{ org.gitops }}"
     msg: "[ci skip] Pushing deployment files for namespace, service accounts and clusterrolebinding"
   tags:
     - notest
