--- a/platforms/hyperledger-fabric/configuration/roles/delete/genesis/tasks/main.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/delete/genesis/tasks/main.yaml
@@ -11,7 +11,11 @@
 # Delete BASE 64 encoded genesis blocks for all channels
 - name: Delete genesis block from Vault for syschannel
   shell: |
-    vault kv delete {{ item.vault.secret_path | default('secretsv2') }}/{{ item.name | lower }}/ordererOrganizations/{{ component_name }}/{{ sys_channel_name }}
+    vault kv delete {{ item.vault.secret_path | default('secretsv2') }}/{{ network.env.type }}{{ item.name | lower }}/channel-artifacts/syschannel-genesis
+    target_path={{ item.vault.secret_path | default('secretsv2') }}/{{ network.env.type }}{{ item.name | lower }}/channel-artifacts;
+    for key in $(vault kv list -format=json "$target_path" | jq -r '.[]'); do
+      vault kv delete "$target_path/$key";
+    done 
   environment:
     VAULT_ADDR: "{{ item.vault.url }}"
     VAULT_TOKEN: "{{ item.vault.root_token }}"
@@ -20,7 +24,11 @@
 # Delete genesis block to Vault
 - name: "Delete genesis block to Vault for app channel"  
   shell: |
-    vault kv delete {{ item.vault.secret_path | default('secretsv2') }}//{{ item.name | lower }}/ordererOrganizations/{{ component_name }}/{{ channel.channel_name | lower }}
+    vault kv delete {{ item.vault.secret_path | default('secretsv2') }}/{{ network.env.type }}{{ item.name | lower }}/channel-artifacts/{{ channel.channel_name | lower }}-genesis
+    target_path={{ item.vault.secret_path | default('secretsv2') }}/{{ network.env.type }}{{ item.name | lower }}/channel-artifacts;
+    for key in $(vault kv list -format=json "$target_path" | jq -r '.[]'); do
+      vault kv delete "$target_path/$key";
+    done 
   environment:
     VAULT_ADDR: "{{ item.vault.url }}"
     VAULT_TOKEN: "{{ item.vault.root_token }}"
