--- a/platforms/hyperledger-fabric/configuration/roles/helm_component/vars/main.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/helm_component/vars/main.yaml
@@ -5,8 +5,7 @@
 ##############################################################################################
 
 helm_templates:
-  ca-orderer: ca-orderer.tpl
-  ca-peer: ca-peer.tpl
+  ca-server: ca-server.tpl
   ca-tools: ca-tools.tpl
   cas: ca.tpl
   orderers: orderernode.tpl
@@ -30,30 +29,19 @@ helm_templates:
   external_chaincode: external_chaincode.tpl
   install_external_chaincode_job: install_external_chaincode_job.tpl
 
-alpine_image: bevel-alpine:latest
-ca_tools_image: bevel-fabric-ca-tools:1.2.1
+bevel_alpine_version: latest # Change to tag version when using tag specific images
+fabric_tools_image: bevel-fabric-tools
 kafka_image: bevel-fabric-kafka:0.4.18
 zookeeper_image: bevel-fabric-zookeeper:0.4.18
 fabric_console_image: bevel-fabric-console:latest
+orderer_image: bevel-fabric-orderer
+peer_image: bevel-fabric-peer
+couchdb_image: bevel-fabric-couchdb
+
 ca_image:
   1.4.8: bevel-fabric-ca:1.4.8
   2.2.2: bevel-fabric-ca:1.4.8
   2.5.4: bevel-fabric-ca:latest
-
-orderer_image: 
-  1.4.8: bevel-fabric-orderer:1.4.8
-  2.2.2: bevel-fabric-orderer:2.2.2
-  2.5.4: bevel-fabric-orderer:2.5.4
-
-peer_image: 
-  1.4.8: bevel-fabric-peer:1.4.8
-  2.2.2: bevel-fabric-peer:2.2.2
-  2.5.4: bevel-fabric-peer:2.5.4
-
-couchdb_image: 
-  1.4.8: bevel-fabric-couchdb:1.4.8
-  2.2.2: bevel-fabric-couchdb:2.2.2
-  2.5.4: bevel-fabric-couchdb:2.5.4
 
 fabric_tools_image:
   1.4.8: bevel-fabric-tools:1.4.8
