--- a/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
+++ b/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
@@ -9,6 +9,7 @@ job_templates:
   secondary_genesis: secondary_genesis.tpl
   primary_init: primary_init.tpl
   secondary_init: secondary_init.tpl
+  fabric_genesis: fabric_genesis.tpl
   indy_genesis: indy_genesis.tpl
   indy_endorser: indy_endorser.tpl
 charts:
@@ -16,5 +17,9 @@ charts:
   secondary_genesis: "{{ network.type }}-genesis"
   primary_init: corda-init
   secondary_init: corda-init
-  indy_genesis: indy-genesis
-  indy_endorser: indy-register-identity
+  fabric_genesis: fabric-genesis
+
+bevel_alpine_version: latest
+fabric_tools_image: bevel-fabric-tools
+indy_genesis: indy-genesis
+indy_endorser: indy-register-identity
