--- a/platforms/shared/configuration/roles/helm_lint/vars/main.yaml
+++ b/platforms/shared/configuration/roles/helm_lint/vars/main.yaml
@@ -5,8 +5,7 @@
 ##############################################################################################
 
 charts:
-  ca-orderer: fabric-ca-server
-  ca-peer: fabric-ca-server
+  ca-server: fabric-ca-server
   ca-tools: fabric-catools
   cas: fabric-ca-server
   orderers: fabric-orderernode
