--- a/platforms/hyperledger-fabric/configuration/samples/network-fabricv2-raft-add-orderer.yaml
+++ b/platforms/hyperledger-fabric/configuration/samples/network-fabricv2-raft-add-orderer.yaml
@@ -44,26 +44,22 @@ network:
       type: orderer
       name: orderer1
       org_name: supplychain               #org_name should match one organization definition below in organizations: key            
-      uri: orderer1.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
-      certificate: /home/bevel/build/orderer1.crt           # Ensure that the directory exists
+      uri: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
     - orderer:
       type: orderer
       name: orderer2
       org_name: supplychain               #org_name should match one organization definition below in organizations: key            
-      uri: orderer2.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
-      certificate: /home/bevel/build/orderer2.crt           # Ensure that the directory exists
+      uri: orderer2.supplychain-net.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
     - orderer:
       type: orderer
       name: orderer3
       org_name: supplychain               #org_name should match one organization definition below in organizations: key            
-      uri: orderer3.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
-      certificate: /home/bevel/build/orderer3.crt           # Ensure that the directory exists
+      uri: orderer3.supplychain-net.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
     - orderer:
       type: orderer
       name: orderer4
       org_name: supplychain               #org_name should match one organization definition below in organizations: key            
-      uri: orderer4.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
-      certificate: /home/bevel/build/orderer4.crt           # Ensure that the directory exists
+      uri: orderer4.supplychain-net.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
 
   # The channels defined for a network with participating peers in each channel
   channels:
@@ -84,7 +80,7 @@ network:
         name: peer0
         gossipAddress: peer0.carrier-net.org3proxy.blockchaincloudpoc.com:443  # Must include port, External or internal URI of the gossip peer
         peerAddress: peer0.carrier-net.org3proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443             # Must include port, External or internal URI of the orderer
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443             # Must include port, External or internal URI of the orderer
     - organization:
       name: store
       type: joiner        # joiner organization will only join the channel and install chaincode
@@ -94,7 +90,7 @@ network:
         name: peer0
         gossipAddress: peer0.store-net.org4proxy.blockchaincloudpoc.com:443
         peerAddress: peer0.store-net.org4proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
     - organization:
       name: warehouse
       type: joiner
@@ -104,7 +100,7 @@ network:
         name: peer0
         gossipAddress: peer0.warehouse-net.org5proxy.blockchaincloudpoc.com:443
         peerAddress: peer0.warehouse-net.org5proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
     - organization:
       name: manufacturer
       type: joiner
@@ -114,9 +110,7 @@ network:
         name: peer0
         gossipAddress: peer0.manufacturer-net.org2proxy.blockchaincloudpoc.com:443
         peerAddress: peer0.manufacturer-net.org2proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
-    genesis:
-      name: OrdererGenesis
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
 
   # Allows specification of one or many organizations that will be connecting to a network.
   # If an organization is also hosting the root of the network (e.g. doorman, membership service, etc),
@@ -130,11 +124,9 @@ network:
       state: London
       location: London
       subject: "O=Orderer,L=51.50/-0.13/London,C=GB"
-      type: orderer
       external_url_suffix: org1proxy.blockchaincloudpoc.com
       org_status: existing
       ca_data:
-        url: ca.supplychain-net.org1proxy.blockchaincloudpoc.com
         certificate: /path/supplychain/server.crt        # Path where ca public cert will be stored (if new) or read from (if existing ca)
 
       cloud_provider: aws   # Options: aws, azure, gcp, digitalocean, minikube
@@ -193,7 +185,7 @@ network:
           consensus: raft
           grpc:
             port: 7050
-          ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
+          ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
         - orderer:
           name: orderer2
           status: existing
@@ -201,7 +193,7 @@ network:
           consensus: raft
           grpc:
             port: 7050
-          ordererAddress: orderer2.org1proxy.blockchaincloudpoc.com:443
+          ordererAddress: orderer2.supplychain-net.org1proxy.blockchaincloudpoc.com:443
         - orderer:
           name: orderer3
           status: existing
@@ -209,7 +201,7 @@ network:
           consensus: raft
           grpc:
             port: 7050
-          ordererAddress: orderer3.org1proxy.blockchaincloudpoc.com:443
+          ordererAddress: orderer3.supplychain-net.org1proxy.blockchaincloudpoc.com:443
         - orderer:
           name: orderer4
           status: new
@@ -217,4 +209,4 @@ network:
           consensus: raft
           grpc:
             port: 7050
-          ordererAddress: orderer4.org1proxy.blockchaincloudpoc.com:443
+          ordererAddress: orderer4.supplychain-net.org1proxy.blockchaincloudpoc.com:443
