--- a/platforms/hyperledger-fabric/configuration/samples/network-operator-fabric.yaml
+++ b/platforms/hyperledger-fabric/configuration/samples/network-operator-fabric.yaml
@@ -46,20 +46,17 @@ network:
       type: orderer
       name: orderer1
       org_name: supplychain               #org_name should match one organization definition below in organizations: key            
-      uri: orderer1.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
-      certificate: /home/bevel/build/orderer1.crt           # Ensure that the directory exists
+      uri: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
     - orderer:
       type: orderer
       name: orderer2
       org_name: supplychain               #org_name should match one organization definition below in organizations: key            
-      uri: orderer2.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
-      certificate: /home/bevel/build/orderer2.crt           # Ensure that the directory exists
+      uri: orderer2.supplychain-net.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
     - orderer:
       type: orderer
       name: orderer3
       org_name: supplychain               #org_name should match one organization definition below in organizations: key            
-      uri: orderer3.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
-      certificate: /home/bevel/build/orderer3.crt           # Ensure that the directory exists
+      uri: orderer3.supplychain-net.org1proxy.blockchaincloudpoc.com:443   # Must include port, Can be external or internal URI for orderer which should be reachable by all peers
 
   # The channels defined for a network with participating peers in each channel
   channels:
@@ -80,7 +77,7 @@ network:
         name: peer0
         gossipAddress: peer0.carrier-net.org3proxy.blockchaincloudpoc.com:443  # Must include port, External or internal URI of the gossip peer
         peerAddress: peer0.carrier-net.org3proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443             # Must include port, External or internal URI of the orderer
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443             # Must include port, External or internal URI of the orderer
     - organization:
       name: store
       type: joiner        # joiner organization will only join the channel and install chaincode
@@ -90,7 +87,7 @@ network:
         name: peer0
         gossipAddress: peer0.store-net.org4proxy.blockchaincloudpoc.com:443
         peerAddress: peer0.store-net.org4proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
     - organization:
       name: warehouse
       type: joiner
@@ -100,7 +97,7 @@ network:
         name: peer0
         gossipAddress: peer0.warehouse-net.org5proxy.blockchaincloudpoc.com:443
         peerAddress: peer0.warehouse-net.org5proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
     - organization:
       name: manufacturer
       type: joiner
@@ -110,7 +107,7 @@ network:
         name: peer0
         gossipAddress: peer0.manufacturer-net.org2proxy.blockchaincloudpoc.com:443
         peerAddress: peer0.manufacturer-net.org2proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-      ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
+      ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
     endorsers:
     # Only one peer per org required for endorsement
     - organization:
@@ -141,8 +138,6 @@ network:
         name: peer0
         corepeerAddress: peer0.store-net.org4proxy.blockchaincloudpoc.com:443
         certificate: "/path/store/server.crt" # certificate path for peer
-    genesis:
-      name: OrdererGenesis
 
   # Allows specification of one or many organizations that will be connecting to a network.
   # If an organization is also hosting the root of the network (e.g. doorman, membership service, etc),
@@ -156,12 +151,10 @@ network:
       state: London
       location: London
       subject: "O=Orderer,OU=Orderer,L=51.50/-0.13/London,C=GB"
-      type: orderer
       external_url_suffix: org1proxy.blockchaincloudpoc.com
       org_status: new
       fabric_console: enabled               # To deploy Fabric console for this organization
       ca_data:
-        url: ca.supplychain-net.org1proxy.blockchaincloudpoc.com
         certificate: /path/supplychain/server.crt        # Path where ca public cert will be stored (if new) or read from (if existing ca)
 
       cloud_provider: aws   # Options: aws, azure, gcp, digitalocean, minikube
@@ -198,21 +191,21 @@ network:
           consensus: raft
           grpc:
             port: 7050
-          ordererAddress: orderer1.org1proxy.blockchaincloudpoc.com:443
+          ordererAddress: orderer1.supplychain-net.org1proxy.blockchaincloudpoc.com:443
         - orderer:
           name: orderer2
           type: orderer
           consensus: raft
           grpc:
             port: 7050
-          ordererAddress: orderer2.org1proxy.blockchaincloudpoc.com:443
+          ordererAddress: orderer2.supplychain-net.org1proxy.blockchaincloudpoc.com:443
         - orderer:
           name: orderer3
           type: orderer
           consensus: raft
           grpc:
             port: 7050
-          ordererAddress: orderer3.org1proxy.blockchaincloudpoc.com:443
+          ordererAddress: orderer3.supplychain-net.org1proxy.blockchaincloudpoc.com:443
 
     # Specification for the 2nd organization. Each organization maps to a VPC and a separate k8s cluster
     - organization:
@@ -221,13 +214,11 @@ network:
       state: Zurich
       location: Zurich
       subject: "O=Manufacturer,OU=Manufacturer,L=47.38/8.54/Zurich,C=CH"
-      type: peer
       external_url_suffix: org2proxy.blockchaincloudpoc.com
       org_status: new
       orderer_org: supplychain # Name of the organization that provides the ordering service
       fabric_console: enabled               # To deploy Fabric console for this organization
       ca_data:
-        url: ca.manufacturer-net.org2proxy.blockchaincloudpoc.com
         certificate: /path/manufacturer/server.crt
 
       cloud_provider: aws   # Options: aws, azure, gcp, digitalocean, minikube
@@ -264,7 +255,6 @@ network:
           type: anchor    # This can be anchor/nonanchor. Atleast one peer should be anchor peer.         
           gossippeeraddress: peer0.manufacturer-net:7051 # Internal Address of the other peer in same Org for gossip, same peer if there is only one peer 
           peerAddress: peer0.manufacturer-net.org2proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer 
-          certificate: /path/manufacturer/peer0.crt # Path to peer Certificate
           cli: disabled      # Creates a peer cli pod depending upon the (enabled/disabled) tag.
           cactus_connector: disabled  # set to enabled to create a cactus connector for Fabric
           grpc:
@@ -299,13 +289,11 @@ network:
       state: London
       location: London
       subject: "O=Carrier,OU=Carrier,L=51.50/-0.13/London,C=GB"
-      type: peer
       external_url_suffix: org3proxy.blockchaincloudpoc.com
       org_status: new
       orderer_org: supplychain # Name of the organization that provides the ordering service
       fabric_console: disabled               # To not deploy Fabric console for this organization
       ca_data:
-        url: ca.carrier-net.org3proxy.blockchaincloudpoc.com
         certificate: /path/carrier/server.crt
 
       cloud_provider: aws   # Options: aws, azure, gcp, digitalocean, minikube
@@ -340,7 +328,6 @@ network:
           type: anchor    # This can be anchor/nonanchor. Atleast one peer should be anchor peer.    
           gossippeeraddress: peer0.carrier-net:7051 # Internal Address of the other peer in same Org for gossip, same peer if there is only one peer
           peerAddress: peer0.carrier-net.org3proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-          certificate: /path/carrier/peer0.crt   # Path to peer Certificate
           cli: disabled      # Creates a peer cli pod depending upon the (enabled/disabled) tag.
           cactus_connector: disabled  # set to enabled to create a cactus connector for Fabric
           grpc:
@@ -374,13 +361,11 @@ network:
       state: New York
       location: New York
       subject: "O=Store,OU=Store,L=40.73/-74/New York,C=US"
-      type: peer
       external_url_suffix: org4proxy.blockchaincloudpoc.com
       org_status: new
       orderer_org: supplychain # Name of the organization that provides the ordering service
       fabric_console: disabled               # To not deploy Fabric console for this organization
       ca_data:
-        url: ca.store-net.org4proxy.blockchaincloudpoc.com
         certificate: /path/store/server.crt
 
       cloud_provider: aws   # Options: aws, azure, gcp, digitalocean, minikube
@@ -415,7 +400,6 @@ network:
           type: anchor    # This can be anchor/nonanchor. Atleast one peer should be anchor peer. 
           gossippeeraddress: peer0.store-net:7051 # Internal Address of the other peer in same Org for gossip, same peer if there is only one peer 
           peerAddress: peer0.store-net.org4proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer
-          certificate: /path/store/peer0.crt # Path to peer Certificate
           cli: disabled      # Creates a peer cli pod depending upon the (enabled/disabled) tag.
           cactus_connector: disabled  # set to enabled to create a cactus connector for Fabric
           grpc:
@@ -450,13 +434,11 @@ network:
       state: Massachusetts
       location: Boston
       subject: "O=Warehouse,OU=Warehouse,L=42.36/-71.06/Boston,C=US"
-      type: peer
       external_url_suffix: org5proxy.blockchaincloudpoc.com
       org_status: new
       orderer_org: supplychain # Name of the organization that provides the ordering service
       fabric_console: disabled               # To not deploy Fabric console for this organization
       ca_data:
-        url: ca.warehouse-net.org5proxy.blockchaincloudpoc.com
         certificate: /path/warehouse/server.crt
 
       cloud_provider: aws   # Options: aws, azure, gcp, digitalocean, minikube
@@ -491,7 +473,6 @@ network:
           type: anchor    # This can be anchor/nonanchor. Atleast one peer should be anchor peer.   
           gossippeeraddress: peer0.warehouse-net:7051 # Internal Address of the other peer in same Org for gossip, same peer if there is only one peer 
           peerAddress: peer0.warehouse-net.org5proxy.blockchaincloudpoc.com:443 # Must include port, External URI of the peer 
-          certificate: /path/warehouse/peer0.crt # Path to peer Certificate
           cli: disabled      # Creates a peer cli pod depending upon the (enabled/disabled) tag.
           cactus_connector: disabled  # set to enabled to create a cactus connector for Fabric
           grpc:
